--- a/alvin_app_1/templates/index.html
+++ b/alvin_app_1/templates/index.html
@@ -2,9 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>django</title>
 </head>
 <body>
-
+<a href="{% url 'my_about' %}">About Us</a>
+<a href="{% url 'my_contact' %}">Contact us</a>
+<h1>This is my homepage</h1>
 </body>
 </html>
